--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -91,6 +91,14 @@ jobs:
           PGUSER: myapp
         run: |
           bin/rails db:setup
+          
+      - name: Migrate database
+        env:
+          RAILS_ENV: test
+          PGHOST: localhost
+          PGUSER: myapp
+        run: |
+          bin/rails db:migrate
 
       - name: Run tests
         run: bin/rspec
