--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -36,14 +36,11 @@ jobs:
 
       - name: Run linters
         run: |
-          bin/rubocop --parallel
-          bin/stylelint
-          bin/prettier
-          bin/eslint
+          bundle exec rubocop --parallel
       - name: Run security checks
         run: |
-          bin/bundler-audit --update
-          bin/brakeman -q -w2
+          bundle exec bundler-audit --update
+          bundle exec brakeman -q -w2
 
   tests:
     name: Tests
